--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: true
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:sql/data.sql
 
 server:
   port: 8080
