--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,6 +2,9 @@ spring:
   datasource:
     username: test
     password: test
-    hikari:
-      connection-timeout: 250
+  r2dbc:
+    username: test
+    password: test
+    pool:
+      max-size: 200
 
