--- a/showcase-service/build.gradle
+++ b/showcase-service/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.liquibase:liquibase-core'
     implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
     compileOnly 'org.projectlombok:lombok'
