--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -2,10 +2,12 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'checkstyle'
+	id "org.openapi.generator" version "7.12.0"
 }
 
 group = 'ru.azmeev.intershop'
-version = '0.0.1-SNAPSHOT'
+version = '1.0-SNAPSHOT'
 
 java {
 	toolchain {
@@ -13,13 +15,40 @@ java {
 	}
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
+openApiGenerate {
+	generatorName.set("spring")
+	inputSpec.set("$projectDir/src/main/resources/api-spec.yaml")
+	outputDir.set("$projectDir/build/generated")
+	invokerPackage.set("ru.azmeev.intershop.server")
+	modelPackage.set("ru.azmeev.intershop.domain")
+	apiPackage.set("ru.azmeev.intershop.api")
+	configOptions.set([
+			interfaceOnly: "true",
+			library: "spring-boot",
+			useSpringBoot3: "true",
+			reactive: "true",
+			openApiNullable: "false"
+
+	])
+}
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
