--- a/showcase-service/src/main/resources/api-spec.yaml
+++ b/showcase-service/src/main/resources/api-spec.yaml
@@ -77,6 +77,7 @@ components:
       type: object
       required:
         - amount
+        - userId
       properties:
         amount:
           type: number
@@ -84,6 +85,11 @@ components:
           minimum: 0.01
           description: Order amount to deduct from balance
           example: 99.99
+        userId:
+          type: integer
+          format: int64
+          description: User ID making the payment
+          example: 12345
     PaymentResponse:
       type: object
       properties:
