--- a/showcase-service/src/main/resources/application.yml
+++ b/showcase-service/src/main/resources/application.yml
@@ -17,10 +17,30 @@ spring:
     redis:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8090/realms/master
+            authorization-uri: http://localhost:8090/realms/master/protocol/openid-connect/auth
+            token-uri: http://localhost:8090/realms/master/protocol/openid-connect/token
+            user-info-uri: http://localhost:8090/realms/master/protocol/openid-connect/userinfo
+            user-name-attribute: sub
+            jwk-set-uri: http://localhost:8090/realms/master/protocol/openid-connect/certs
+        registration:
+          keycloak:
+            authorizationGrantType: authorization_code
+            provider: keycloak
+            client-id: showcase-service
+            client-secret: JIN2RD9TLJJj5zK61DeKHw7YNSe3kQR5
+            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
+            scope: openid, profile, email
 server:
   port: 8080
 
 shop:
+  clientRegistrationId: keycloak
   defaultPageSize: 5
   defaultPageNumber: 1
   paymentUrl: ${PAYMENT_URL:http://localhost:8081}
